src/components/Menu/Menu.scss
@import "../../common/colors";
@import "../../common/variables";
@import "../../common/text";

.menu-wrapper {
  height: 40px;
  margin-bottom: 95px;
  text-align: right;
  position: relative;

  .actions-wrapper {
    padding-top: 17px;
    margin-right: 30px;
    display: flex;
    align-items: center;

    .save-button-wrapper {
      position: relative;
      margin-right: 32px;

      .spinner-wrapper {
        position: relative;
        top: -9px;
      }

      .orange-button {
        position: relative;
        left: 14px;
        width: 65px;
        margin-left: 0;
      }

      .blocks-loading-bar {
        position: absolute;
        top: 25px;
        width: 65px;
        left: 14px;
      }
    }

    .hamburger {
      display: inline-block;
      position: relative;
      top: 1px;
      width: 40px;

      span {
        color: $yellow;
        transform: rotate(90deg);
        display: inline-block;
        font-size: 20px;
        letter-spacing: 2px;
        cursor: pointer;
        user-select: none;
      }
    }
  }

  .menu-inner-wrapper {
    position: absolute;
    width: 1000px;
    height: 620px;
    top: 0;
    right: 0;
    z-index: 100000;
    overflow: hidden;
    visibility: hidden;
    .menu {
      height: 100%;
      width: 280px;
      margin-left: 720px;
      box-shadow: 0 0 250px 100px rgba(#0A0712, 1);
      background: linear-gradient(180deg, #36265F 0%, #1A122E 100%);
      transform: translateX(100%);
      transition: all .1s;
      padding: 5px;
      .close {
        padding: 20px;
        svg {
          cursor: pointer;
          height: 18px;
          width: 18px;
        }
      }
      .links {
        margin: 52px;
      }
      a {
        display: block;
        cursor: pointer;
        text-decoration: none;
        font-size: 20px;
        font-family: $font-secondary;
        padding: 10px;
        color: white;
        text-transform: uppercase;
        &:hover {
          color: $yellow;
        }
      }
    }
    &.open {
      visibility: visible;
      .menu {
        transform: translateX(0%);
      }
    }
  }
}

